--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Feng, K., Eshraghi, J., Vlachos, P. P., Gomez, H. (2024). Simulation of bubble oscillations in cavitation-induced acoustic fields. <i>Physics of Fluids</i>, 36 (5), 053305. <a class="badge" href="https://doi.org/10.1063/5.0194341" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0194341-green.svg" alt="DOI link" /></a>
+ 		</li>
 		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2024). Modeling and simulation of the cavitation phenomenon in space-engine turbopumps. <i>Journal of Computational Physics</i>, 112817. <a class="badge" href="https://doi.org/10.1016/j.jcp.2024.112817" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2024.112817-green.svg" alt="DOI link" /></a>
  		</li>
 		<li> Sun, S., Zhao, M., Jiang, Y. (2024). Numerical study of chain-reaction implosions in a spatial array of ceramic pressure hulls in the deep sea using a compressible multiphase flow model. <i>Physics of Fluids</i>, 36, 016112. <a class="badge" href="https://doi.org/10.1063/5.0184654" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0184654-green.svg" alt="DOI link" /></a>
@@ -143,6 +145,7 @@
 		<li> Zheng, J., He, Y., Zhao, M. (2023). Numerical study of underwater implosion of spherical pressure hull on deep-sea submersibles. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
 		<li> Shengxia, S., Zhao, M. (2023). Numerical simulation of chain-reaction implosions and analysis of different implosion beginning positions. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
 		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). On bubble cloud growth in shock-droplet interaction. <i>11th International Conference on Multiphase Flow, ICMF 2023, Kobe</i>. </li>
+		<li> Feng, K., Eshraghi, J., Vlachos, P., Gomez, H. (2022). Computational modeling of air bubble oscillations in a cavitation-induced acoustic field using multi-phase multicomponent model. <i>Bulletin of the American Physical Society, 75th Annual Meeting of the Division of Fluid Dynamics, V. 67, N. 19, Indianapolis</i>. </li>
 		<li> Schmidmayer, K., Cazé, J., Petitpas, F., Daniel, E., Favrie, N. (2022). Modelling interactions of waves with diffused interfaces. <i>10th International Conference on Numerical Methods for Multi-Material Fluid Flow, MultiMat 2022, Zürich</i>. </li>
 		<li> Cazé, J., Petitpas, F., Daniel, E., Le Martelot, S., Queguineur, M. (2022). Modeling and simulation of a turbopump flow: a multiphase approach. <i>ASME Turbo Expo 2022 - Turbomachinery Technical Conference and Exposition, Rotterdam</i>. <a class="badge" href="https://doi.org/10.1115/GT2022-78025" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1115/GT2022--78025-green.svg" alt="DOI link" /></a></li>
 		<li> Schmidmayer, K. (2022). Modeling and simulation of bubble dynamics in the diffuse-interface framework. <i>Workshop on cavitation, bubble dynamics and mass transfer, Strasbourg</i>. </li>
