--- a/publications/index.html
+++ b/publications/index.html
@@ -80,7 +80,7 @@
  		</li>
 		<li> Feng, K., Eshraghi, J., Vlachos, P. P., Gomez, H. (2024). Simulation of bubble oscillations in cavitation-induced acoustic fields. <i>Physics of Fluids</i>, 36 (5), 053305. <a class="badge" href="https://doi.org/10.1063/5.0194341" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0194341-green.svg" alt="DOI link" /></a>
  		</li>
-		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2024). Modeling and simulation of the cavitation phenomenon in space-engine turbopumps. <i>Journal of Computational Physics</i>, 112817. <a class="badge" href="https://doi.org/10.1016/j.jcp.2024.112817" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2024.112817-green.svg" alt="DOI link" /></a>
+		<li> Cazé, J., Petitpas, F., Daniel, E., Queguineur, M., Le Martelot, S. (2024). Modeling and simulation of the cavitation phenomenon in turbopumps. <i>Journal of Computational Physics</i>, 112817. <a class="badge" href="https://doi.org/10.1016/j.jcp.2024.112817" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.jcp.2024.112817-green.svg" alt="DOI link" /></a>
  		</li>
 		<li> Sun, S., Zhao, M., Jiang, Y. (2024). Numerical study of chain-reaction implosions in a spatial array of ceramic pressure hulls in the deep sea using a compressible multiphase flow model. <i>Physics of Fluids</i>, 36, 016112. <a class="badge" href="https://doi.org/10.1063/5.0184654" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0184654-green.svg" alt="DOI link" /></a>
 		</li>
