--- a/publications/index.html
+++ b/publications/index.html
@@ -76,7 +76,9 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
-		<li> Zhao, J., Wang, J., Cao, S. (2024). Dynamics of tandem bubble interaction near tissue. <i>Physics of Fluids</i>, 36 (5), 053324. <a class="badge" href="https://doi.org/10.1063/5.0201811" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0201811-green.svg" alt="DOI link" /></a>
+		<li> Schropff, S., Petitpas, F., Daniel, E. (2024). Reference solutions for compressible single-phase flows in heated and cooled ducts. <i>Physics of Fluids</i>, 36 (5), 056126. <a class="badge" href="https://doi.org/10.1063/5.0209500" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0209500-green.svg" alt="DOI link" /></a>
+ 		</li>
+ 		<li> Zhao, J., Wang, J., Cao, S. (2024). Dynamics of tandem bubble interaction near tissue. <i>Physics of Fluids</i>, 36 (5), 053324. <a class="badge" href="https://doi.org/10.1063/5.0201811" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0201811-green.svg" alt="DOI link" /></a>
  		</li>
 		<li> Feng, K., Eshraghi, J., Vlachos, P. P., Gomez, H. (2024). Simulation of bubble oscillations in cavitation-induced acoustic fields. <i>Physics of Fluids</i>, 36 (5), 053305. <a class="badge" href="https://doi.org/10.1063/5.0194341" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0194341-green.svg" alt="DOI link" /></a>
  		</li>
