--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> Hong, Z.-Y., Song, Y., Wang, R., Ma, Z.-Q., Ma, D.-J., Wang, P. (2024). Deformation and mutual influence of two cylindrical water columns in tandem subjected to shock wave. <i>hinese Physics B</i>. <a class="badge" href="https://doi.org/10.1063/5.0209500" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0209500-green.svg" alt="DOI link" /></a>
+ 		</li>
 		<li> Schropff, S., Petitpas, F., Daniel, E. (2024). Reference solutions for compressible single-phase flows in heated and cooled ducts. <i>Physics of Fluids</i>, 36 (5), 056126. <a class="badge" href="https://doi.org/10.1063/5.0209500" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0209500-green.svg" alt="DOI link" /></a>
  		</li>
  		<li> Zhao, J., Wang, J., Cao, S. (2024). Dynamics of tandem bubble interaction near tissue. <i>Physics of Fluids</i>, 36 (5), 053324. <a class="badge" href="https://doi.org/10.1063/5.0201811" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0201811-green.svg" alt="DOI link" /></a>
