--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> G. T. Bokman, L. Biasiori-Poulanges, B. Lukić, K. Schmidmayer, C. Bourquard, E. Baumann, A. Rack, B. J. Olson, O. Supponen (2024). Impulse-driven release of gas-encapsulated drops. <i>Journal of Fluid Mechanics</i>, 1001, A51. <a class="badge" href="https://doi.org/10.1017/jfm.2024.1124" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2024.1124-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> Zheng, D., Guo, X., Zhai, Z., &amp; Luo, X. (2024). Simulations on perturbation growth and mixing of a shocked light fluid layer with two different interfaces. <i>Physics of Fluids</i>, 36 (12), 124103. <a class="badge" href="https://doi.org/10.1063/5.0243145" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0243145-green.svg" alt="DOI link" /></a>
  		</li>
 		<li> Hong, Z.-Y., Song, Y., Wang, R., Ma, Z.-Q., Ma, D.-J., Wang, P. (2024). Deformation and mutual influence of two cylindrical water columns in tandem subjected to shock wave. <i>Chinese Physics B</i>. <a class="badge" href="https://doi.org/10.1088/1674-1056/ad5273" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1088/1674-1056/ad5273-green.svg" alt="DOI link" /></a>
