--- a/publications/index.html
+++ b/publications/index.html
@@ -76,7 +76,11 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
-		<li> M. Brasseur, G. Jourdan, C. Mariani, D. C. Barros, M. Vandenboomgaerde, D. Souffland (2025). Experimental study of the Richtmyer-Meshkov instability in spherical geometry. <i>Physycal Review Fluids</i>, 10 (1), 014001. <a class="badge" href="https://doi.org/10.1103/PhysRevFluids.10.014001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1103/PhysRevFluids.10.014001-green.svg" alt="DOI link" /></a>
+		<li> M. Le Boursicaud, S. Zhao, J.-L. Consalvi, P. Boivin (2025). A reduced order numerical model for high-pressure hydrogen leak self-ignition. <i>Combustion and Flame</i>, 274, 114003. <a class="badge" href="https://doi.org/10.1016/j.combustflame.2025.114003" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.combustflame.2025.114003-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> M. Brasseur, G. Jourdan, C. Mariani, D. C. Barros, M. Vandenboomgaerde, D. Souffland (2025). Experimental study of the Richtmyer-Meshkov instability in spherical geometry. <i>Physical Review Fluids</i>, 10 (1), 014001. <a class="badge" href="https://doi.org/10.1103/PhysRevFluids.10.014001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1103/PhysRevFluids.10.014001-green.svg" alt="DOI link" /></a>
+		</li>
+		<li> S. Sun, M. Zhao, X. Zhang, J. Zheng, and T. Li (2025). Suppression effect on implosion of ceramic pressure hull through porous protection based on flow control. <i>Physics of Fluids</i>, 37 (1), 016141. <a class="badge" href="https://doi.org/10.1063/5.0250858" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1063/5.0250858-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> G. T. Bokman, L. Biasiori-Poulanges, B. Lukić, K. Schmidmayer, C. Bourquard, E. Baumann, A. Rack, B. J. Olson, O. Supponen (2024). Impulse-driven release of gas-encapsulated drops. <i>Journal of Fluid Mechanics</i>, 1001, A51. <a class="badge" href="https://doi.org/10.1017/jfm.2024.1124" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1017/jfm.2024.1124-green.svg" alt="DOI link" /></a>
 		</li>
