--- a/publications/index.html
+++ b/publications/index.html
@@ -76,6 +76,8 @@
 <article>
 	<h1> Journal Articles </h1>
 	<ol>
+		<li> A. Prasanna, G. T. Bokman, S. Fiorini, A. Sieber, B. Lukić, D. Foster, O. Supponen (2025). Shock compression-based equation of state for perfluorohexane. <a class="badge" href="https://doi.org/10.48550/arXiv.2503.21306" target="_blank"><img src="https://img.shields.io/badge/DOI-10.48550/arXiv.2503.21306-green.svg" alt="DOI link" /></a>
+		</li>
 		<li> M. Le Boursicaud, S. Zhao, J.-L. Consalvi, P. Boivin (2025). A reduced order numerical model for high-pressure hydrogen leak self-ignition. <i>Combustion and Flame</i>, 274, 114003. <a class="badge" href="https://doi.org/10.1016/j.combustflame.2025.114003" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.combustflame.2025.114003-green.svg" alt="DOI link" /></a>
 		</li>
 		<li> M. Brasseur, G. Jourdan, C. Mariani, D. C. Barros, M. Vandenboomgaerde, D. Souffland (2025). Experimental study of the Richtmyer-Meshkov instability in spherical geometry. <i>Physical Review Fluids</i>, 10 (1), 014001. <a class="badge" href="https://doi.org/10.1103/PhysRevFluids.10.014001" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1103/PhysRevFluids.10.014001-green.svg" alt="DOI link" /></a>
@@ -138,6 +140,8 @@
 <article>
 	<h1> PhD Theses </h1>
 	<ol>
+		<li> Bokman, G. (2025). Shock wave-driven bubble dynamics. <i>ETH Zürich</i>.
+		</li>
 		<li> Cazé, J. (2022). Modeling and simulation of the cavitation phenomenon in space engine turbopumps. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/s230377" target="_blank">Download on www.theses.fr</a>
 		</li>
 		<li> Brasseur, M. (2022). Experimental study of the Richtmyer-Meshkov instability in spherical geometry. <i>Aix-Marseille Université</i>. <a href="https://www.theses.fr/s226927" target="_blank">Download on www.theses.fr</a>
@@ -169,7 +173,7 @@
 		<li> Schmidmayer, K., Colonius, T. (2019). A comparative study on interface-capturing models and schemes to solve bubble dynamics and cavitation. <i>10th International Conference on Multiphase Flow, ICMF 2019, Rio de Janeiro</i>. </li>
 		<li> Marty, A., Jourdan, G., Houas, L., Mariani, C. C., Daniel, E., Biamino, L., Leriche, D. (2019). Shock wave mitigation propagating through a cavity. <i>32nd International Symposium on Shock Waves, ISSW32, Singapore</i>. </li>
 		<li> Schmidmayer, K., Colonius, T. (2018). Simulation of the collapse of a vapor bubble near or attached to a rigid surface. <i>71st Annual Meeting of the APS Division of Fluid Dynamics, Atlanta</i>. </li>
-		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics, Salon-de-Provence</i>. <a class="badge" href="https://arxiv.org/abs/1805.01363" target="_blank"><img src="https://img.shields.io/badge/arXiv-1805.01363-B31B1B.svg" alt="arXiv link" /></a>
+		<li> Schmidmayer, K., Marty, A., Petitpas, F., Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. <i>53rd 3AF International Conference on applied Aerodynamics, Salon-de-Provence</i>. <a class="badge" href="https://doi.org/10.48550/arXiv.1805.01363" target="_blank"><img src="https://img.shields.io/badge/DOI-10.48550/arXiv.1805.01363-green.svg" alt="arXiv link" /></a>
 		</li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2018). Simulation of the atomization of a droplet by a high-speed flow. <i>Bulletin of the American Physical Society, APS March Meeting 2018, Los Angeles</i>. </li>
 		<li> Schmidmayer, K., Petitpas, F., Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. <i>46th AIAA Fluid Dynamics Conference, Washington</i>. </li>
