Update home (news and partners) and publication pages

--- a/index.html
+++ b/index.html
@@ -71,9 +71,22 @@
     <main>
       <div id="subtitle">An open-source CFD platform for numerical simulation of multiphase compressible flows </div>
 
-      <h2>
+      <p> <i>Find partners at the end of this page.</i> </p>
+
+<h2>
 		News
 </h2>
+
+<hr />
+
+<article>
+	<h1> Exploring the interplay of stone-attached and distant cavitation bubbles during extracorporeal shock wave lithotripsy </h1>
+	<p class="date">2025-05-15, <a href="https://www.icmf2025.com/" target="_blank">ICMF 2025</a>, Toulouse, France</p>
+	<div>
+		<p> K. Schmidmayer is presenting investigations of the dynamics of cavitation bubbles around kidney stones during extracorporeal shock wave lithotripsy. Through a combination of in-situ experiments and diffuse-interface-method simulations, a peculiar interaction between stone-attached and distant bubbles is observed, resulting in a notable pressure increase at the distant-bubble jet-impact site.</p>
+		<img src="/ECOGEN/assets/images/news/BEGO_11_1_15_exp_simu.png" alt="cavitation-bubbles-kedney-stone" />
+	</div>
+</article>
 
 <hr />
 
@@ -124,42 +137,54 @@
 </h2>
 <hr />
 
+<p> Present and past partners: </p>
 <article>
 	<div id="logos">
-		<div class="imgLogos">
-			<a href="https://www.univ-amu.fr/" target="_blank">  <img src="/ECOGEN/assets/images/amu.png" alt="Aix Marseille Universite" /> </a>
+		<div class="imgLogos5">
+			<a href="https://www.univ-amu.fr/" target="_blank">  <img src="/ECOGEN/assets/images/partners/amu.png" alt="Aix Marseille Universite" /> </a>
 		</div>
-		<div class="imgLogos">
-			<a href="https://www.inria.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/Inria.png" alt="Inria" /> </a>
+		<div class="imgLogos4">
+			<a href="https://www.inria.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/partners/Inria.png" alt="Inria" /> </a>
 		</div>
-		<div class="imgLogos">
-			<a href="http://www.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/Caltech.png" alt="Caltech" /> </a>
+		<div class="imgLogos5">
+			<a href="http://www.caltech.edu/" target="_blank">  <img src="/ECOGEN/assets/images/partners/Caltech.png" alt="Caltech" /> </a>
 		</div>
-		<div class="imgLogos">
-			<a href="https://cnes.fr/" target="_blank">  <img src="/ECOGEN/assets/images/is_logo_2017_logo_triangulaire_bleu.png" alt="CNES" /> </a>
+		<div class="imgLogos6">
+			<a href="https://cnes.fr/" target="_blank">  <img src="/ECOGEN/assets/images/partners/CNES.png" alt="CNES" /> </a>
 		</div>
-		<div class="imgLogos">
-			<a href="http://iusti.cnrs.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/iusti.png" alt="IUSTI" /> </a>
+		<div class="imgLogos6">
+			<a href="http://iusti.cnrs.fr/en/" target="_blank">  <img src="/ECOGEN/assets/images/partners/iusti.png" alt="IUSTI" /> </a>
 		</div>
 	</div>
 	<div id="logos">
-		<div class="imgLogos">
-			<a href="https://www-dam.cea.fr/gramat/" target="_blank">  <img src="/ECOGEN/assets/images/CEA_Gramat.jpg" alt="CEA Gramat" /> </a>
+		<div class="imgLogos6">
+			<a href="https://www-dam.cea.fr/gramat/" target="_blank">  <img src="/ECOGEN/assets/images/partners/CEA_Gramat.jpg" alt="CEA Gramat" /> </a>
 		</div>
-		<div class="imgLogos">
-		<a href="https://ethz.ch/en.html" target="_blank">  <img src="/ECOGEN/assets/images/ETH_Zurich.png" alt="ETH_Zurich" /> </a>
-		</div>
-		<div class="imgLogos2">
-		<a href="https://www.defense.gouv.fr/dga" target="_blank">  <img src="/ECOGEN/assets/images/DGA.png" alt="dga" /> </a>
-		</div>
-		<div class="imgLogos">
-		<a href="https://www.onr.navy.mil/" target="_blank">  <img src="/ECOGEN/assets/images/ONR.png" alt="Office of Naval Research" /> </a>
+		<div class="imgLogos5">
+		<a href="https://ethz.ch/en.html" target="_blank">  <img src="/ECOGEN/assets/images/partners/ETH_Zurich.png" alt="ETH_Zurich" /> </a>
 		</div>
 		<div class="imgLogos2">
-			<a href="http://www.cnrs.fr/" target="_blank">  <img src="/ECOGEN/assets/images/CNRS.jpg" alt="CNRS" /> </a>
+			<a href="https://www.univ-pau.fr/en/home.html" target="_blank">  <img src="/ECOGEN/assets/images/partners/UPPA.png" alt="UPPA" /> </a>
 		</div>
-		<div class="imgLogos2">
-		<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/myfrogVert_OR.jpg" alt="code-mphi" /> </a>
+		<div class="imgLogos7">
+		<a href="https://www.defense.gouv.fr/dga" target="_blank">  <img src="/ECOGEN/assets/images/partners/DGA.png" alt="dga" /> </a>
+		</div>
+		<div class="imgLogos7">
+			<a href="http://www.cnrs.fr/" target="_blank">  <img src="/ECOGEN/assets/images/partners/CNRS.jpg" alt="CNRS" /> </a>
+		</div>
+	</div>
+	<div id="logos">
+		<div class="imgLogos5">
+			<a href="https://www.enib.fr/en_enib/" target="_blank">  <img src="/ECOGEN/assets/images/partners/ENIB.jpg" alt="ENIB" /> </a>
+		</div>
+		<div class="imgLogos4">
+		<a href="https://www.polymtl.ca/en/" target="_blank">  <img src="/ECOGEN/assets/images/partners/Polytechnique_Montreal.png" alt="Polytechnique Montréal" /> </a>
+		</div>
+		<div class="imgLogos4">
+		<a href="https://www.onr.navy.mil/" target="_blank">  <img src="/ECOGEN/assets/images/partners/ONR.png" alt="Office of Naval Research" /> </a>
+		</div>
+		<div class="imgLogos8">
+		<a href="https://code-mphi.fr/" target="_blank">  <img src="/ECOGEN/assets/images/partners/code-mphi.jpg" alt="code-mphi" /> </a>
 		</div>
 	</div>
 </article>
