--- a/publications/index.html
+++ b/publications/index.html
@@ -164,6 +164,8 @@
 <article>
 	<h1> Conferences </h1>
 	<ol>
+		<li> Schmidmayer, K. Bokman, G. T. Sieber, A. Ade-Onojobi, A. Lukić, B. Shakya, G. Kühl, A. Schlötter, M. Belau, M. Supponen, O. (2025). Exploring the interplay of stone-attached and distant cavitation bubbles during extracorporeal shock wave lithotripsy. <i>12th International Conference on Multiphase Flow, ICMF 2025, Toulouse, France.</i> </li>
+		<li> Fiorini, S., Bokman, G. T., Prasanna, A., Shakya, G., Nikolaou, S., Lukić, B., Rack, A., Supponen, O. (2025). Shock focusing and vapor nucleation in perfluorocarbon droplets. <i>12th International Conference on Multiphase Flow, ICMF 2025, Toulouse, France.</i> </li>
 		<li> Zheng, J., He, Y., Zhao, M. (2023). Numerical study of underwater implosion of spherical pressure hull on deep-sea submersibles. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
 		<li> Shengxia, S., Zhao, M. (2023). Numerical simulation of chain-reaction implosions and analysis of different implosion beginning positions. <i>ASME 2023 42nd International Conference on Ocean, Offshore and Arctic Engineering, Melbourne</i>. </li>
 		<li> Schmidmayer, K., Biasiori-Poulanges, L. (2023). On bubble cloud growth in shock-droplet interaction. <i>11th International Conference on Multiphase Flow, ICMF 2023, Kobe</i>. </li>
